# lau-geometric-growth

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: agent_shell.rs  curvature.rs  fibonacci.rs  fractal.rs  growth_rate.rs  lib.rs  nautilus.rs  quasicrystal.rs  ricci_flow.rs  spiral.rs  temporal.rs
