[package]
name = "lau-geometric-growth"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-geometric-growth"
description = "Shell growth as computation — logarithmic spirals, golden ratio growth, and temporal recording in spatial geometry"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
